--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -1,27 +1,50 @@
-h1{
+h1 {
     text-align: center;
 }
 
-#info img{
+#info img {
     width: 300px;
     height: auto;
 }
 
-.navbar {
-    background-color: rgba(5, 16, 82, 0.8);
-    text-align: center;
-}
 
-.navbar a{
-    color: #ffffff;
-    font-size: 20px;
-}
 
 .logo-pr {
     width: 80px;
     height: auto;
 }
 
-#info a{
+#info a {
     color: #ffffff;
+}
+
+.tamaño-texto {
+    font-size: 8vh;
+    min-width: 50vw;
+    margin-left: -12vw;
+}
+
+.contenedor {
+    background-color: rgba(256, 256, 256, 0.450);
+    border-radius: 15px;
+}
+
+.bgcustom {
+    background: #a8ff78;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #78ffd6, #a8ff78);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #78ffd6, #a8ff78);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+@media (max-width: 575px) {
+    img {
+        width: 100vh;
+        height: auto;
+    }
+
+    .tamaño-texto {
+        font-size: 5vh;
+    }
 }
