--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -3,7 +3,7 @@ h1 {
 }
 
 #info img {
-    width: 300px;
+    width: 30vh;
     height: auto;
 }
 
@@ -18,15 +18,18 @@ h1 {
     color: #ffffff;
 }
 
-.tamaño-texto {
-    font-size: 8vh;
-    min-width: 50vw;
-    margin-left: -12vw;
+.font {
+    font-family:'Courier New', Courier, monospace;
+    font-size: 7vh;
+    font-weight: 700;
 }
 
 .contenedor {
     background-color: rgba(256, 256, 256, 0.450);
     border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .bgcustom {
@@ -38,10 +41,12 @@ h1 {
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-@media (max-width: 575px) {
+@media (max-width: 1000px) {
     img {
-        width: 100vh;
+        display: flex;
+        width: 50vh;
         height: auto;
+        align-items: center;
     }
 
     .tamaño-texto {
