--- a/templates/index.html
+++ b/templates/index.html
@@ -5,37 +5,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Login</title>    
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/PROYECT-SHOP-OF-POINTS/static/css/bootstrap.min.css">
     </LInk>
     <!-- CUSTOM CSS-->
-    <link type="text/css" rel="stylesheet" href="/static/css/estilos.css">
+    <link type="text/css" rel="stylesheet" href="/PROYECT-SHOP-OF-POINTS/static/css/estilos.css">
 </head>
 
 <body class="bgcustom">
-    <div class="container-fluid mt-5 p-lg-5 p-md-4 col-lg-10 offset-lg-1 contenedor">
-        <div class="row">
-            <div id="login" class="col-lg-4 offset-lg-4 col-md-6 offset-md-3">
-                <h2 class="text-center tamaño-texto">Shop of Points</h2>
+    <div class="container-fluid mt-5 p-4 col-8 mx-auto contenedor">
+        <div class="row"> 
+            <div id="login" class="col-lg-6 mx-auto">
+                <h2 class="text-center font">Shop of Points</h2>
                 <h2></h2>
                 <form>
-                    <img class="img-fluid col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 col-xs-6 offset-xs-3"
-                        id="info" src="/img/logo-usuario.png" />
-                    <div class="form-group mx-lg-2">
+                    <img class="img-fluid mx"
+                        id="info" src="/PROYECT-SHOP-OF-POINTS/img/logo-usuario.png" />
+
+                    <div class="form-group">
                         <label for="usuario">Usuario</label>
                         <input id="usuario" name="usuario" class="form-control" type="text"
                             placeholder="Ingrese su usuario">
                     </div>
-                    <div class="form-group mx-lg-2">
+
+                    <div class="form-group">
                         <label for="clave">Contraseña</label>
                         <input id="clave" name="clave" class="form-control" type="password"
                             placeholder="Ingrese su Contraseña">
                     </div>
                     <br>
-                    <button type="submit" class="btn btn-success col-12">Iniciar Sesión</button>
+                    <button type="submit" class="btn btn-success col-1  2">Iniciar Sesión</button>
                 </form>
             </div>
         </div>
