--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +8,10 @@
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="/PROYECT-SHOP-OF-POINTS/static/css/bootstrap.min.css">
-    </LInk>
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    </link>
     <!-- CUSTOM CSS-->
-    <link type="text/css" rel="stylesheet" href="/PROYECT-SHOP-OF-POINTS/static/css/estilos.css">
+    <link type="text/css" rel="stylesheet" href="/static/css/estilos.css">
 </head>
 
 <body class="bgcustom">
@@ -23,7 +22,7 @@
                 <h2></h2>
                 <form>
                     <img class="img-fluid mx"
-                        id="info" src="/PROYECT-SHOP-OF-POINTS/img/logo-usuario.png" />
+                        id="info" src="/img/logo-usuario.png" />
 
                     <div class="form-group">
                         <label for="usuario">Usuario</label>
@@ -37,9 +36,9 @@
                             placeholder="Ingrese su Contraseña">
                     </div>
                     <br>
-                    <button type="submit" class="btn btn-success col-1  2">Iniciar Sesión</button>
+                    <button type="submit" class="btn btn-success col-12">Iniciar Sesión</button>
                 </form>
-            </div>
+            </div>  
         </div>
 
     </div>
